--- a/css/menu.css
+++ b/css/menu.css
@@ -9,7 +9,8 @@
   position:absolute;
   top:0;
   left:0;
-  z-index: pointer;
+  z-index:2;
+  cursor: pointer;
   width: 50px;
   height: 50px;
   opacity: 0;
@@ -38,8 +39,10 @@
   height: 2px;
   background: #fff;
   display: flex;
+  flex: none;
   align-items: center;
   justify-content: center;
+  transition: all 0.4s ease ;
 
 }
 
@@ -56,6 +59,95 @@
   background: inherit;
 }
 
+/* Moves line down*/
 .menu-wrap .hamburger> div::after{
   top: 10px;
+}
+
+/* Toggler Animation */
+.menu-wrap .toggler:checked + .hamburger > div{
+  transform: rotate(135deg);
+}
+
+/* Turns lines inot X */
+ 
+.menu-wrap .toggler:checked + .hamburger > div::before,
+.menu-wrap .toggler:checked + .hamburger > div::after{
+  top: 0;
+  transform: rotate(90deg);
+}
+
+/* Rotate on Hover when checked */
+
+.menu-wrap .toggler:checked:hover + .hamburger > div
+{
+  transform: rotate(225deg);
+}
+
+/* Show Menu */
+
+.menu-wrap .toggler:checked ~ .menu {
+  visibility: visible;
+}
+.menu-wrap .toggler:checked ~ .menu > div{
+  transform:scale(1) ;
+  transition-duration: var(--menu-speed);
+}
+
+.menu-wrap .toggler:checked ~ .menu > div> div{
+  opacity: 1;
+  transition: opacity 00.4s ease 0.4s;
+
+}
+.menu-wrap .menu{
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  Visibility: hidden;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.menu-wrap .menu > div {
+  background: var(--overlay-color);
+  border-radius: 50%;
+  width: 200vw;
+  height: 200vw;
+  display: flex;
+  flex: none;
+  align-items: center;
+  justify-content: center;
+  transition: scale(0);
+  transition: all 0.4s ease;
+}
+
+.menu-wrap .menu > div > div {
+  text-align: center;
+  max-width: 90vw;
+  max-height: 100vw;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+.menu-wrap .menu > div > div > ul > li {
+  list-style: none;
+  color: #fff;
+  font-size: 1.5rem;
+  padding: 1rem;
+
+}
+
+.menu-wrap .menu > div > div > ul > li > a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu-wrap .menu > div > ul > li > a:hover {
+  color: var(--secondary-color);
+
 }
