--- a/css/menu.css
+++ b/css/menu.css
@@ -121,7 +121,7 @@
   flex: none;
   align-items: center;
   justify-content: center;
-  transition: scale(0);
+  transform: scale(0);
   transition: all 0.4s ease;
 }
 
